syntax = "proto3";

package user;

option go_package = "github.com/isy/grpc-sandbox/user;user";

import "user/resources.proto";

message ListUsersResponse {
    repeated User users = 1;
}